applications/klokkprojects/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: klokkprojects
  namespace: klokkprojects
spec:
  type: ClusterIP
  selector:
    app: klokkprojects
  ports:
    - name: web
      port: 3000
      targetPort: 3000
      protocol: TCP
