applications/klokkprojects/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: klokkprojects
  namespace: klokkprojects
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - "klokkprojects.erikak.no"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: klokkprojects
          port: 3000
